Thu May 19 17:53:48 2005  Tim Janik  <timj@gtk.org>

	* sfilog.h, sfilog.c:
	major (and hopefully final) revamp of the message/logging API.
	got rid of log message keys. instead, added mechanism to create 
	new message types. added globally accessible message type bitmask
	to quickly figure whether logging is neccessary. moved the API to
	SfiMessage and sfi_msg_* namespace.

	* sfithreads.h: added wrapper macros (and auxillary functions) to
	access atomic integers and atomic pointers in a typesafe way.

	* *.c: adapted to new debugging API.

Mon May 16 21:01:01 2005  Tim Janik  <timj@gtk.org>

	* sficomport.h, sficomport.c: added sfi_com_port_test_reap_child().

Mon May 16 17:32:24 2005  Tim Janik  <timj@gtk.org>

	* sfilog.h, sfilog.c: API renames for consistency.
	added sfi_log_msg_trampoline() to construct a message and then
	hand it over to a message handler.

Sun May 15 15:52:18 2005  Tim Janik  <timj@gtk.org>

	* Makefile.am: compile toyprof conditionally.
        
Sat May 14 20:49:59 2005  Tim Janik  <timj@gtk.org>

	* sfilog.h, sfilog.c:
	cleanups. API cleanups and consolidations. allow custom log bits.
	renamed message types from SFI_LOG_* to SFI_MSG_*. 

Thu May 12 00:07:51 2005  Tim Janik  <timj@gtk.org>

	* sfilog.h, sfilog.c: made log message much richer.
	messages now carry a title, a primary, a secondary message and
	details messages. added sfi_log_msg() and a set of log message
	formating macros SFI_MSG_*() to facilitate rich log messages.

Mon Apr 11 00:49:40 2005  Tim Janik  <timj@gtk.org>

	* sfi/sfiustore.c: fixed data pointer in sfi_ppool_foreach().

Mon Mar  7 07:32:03 2005  Tim Janik  <timj@gtk.org>

	* removed obsolete .h C++ headers.

	* adapted sources to compile against .hh C++ headers.

Thu Jan 20 17:51:25 2005  Tim Janik  <timj@gtk.org>

	* sfistore.[hc]: removed position arguemtn from SfiStoreReadBin().
	it's the responsibility of the SfiStoreReadBin() implementation to
	provide consequtive data blocks now.
